--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {  "name"                       : "first"
-,  "version"                    : "0.0.7"
-,  "description"                : "web and rest server 2018"
+,  "version"                    : "0.0.8"
+,  "description"                : "web and rest eventsource server 2018"
 ,  "main"                       : "server.js"
 ,  "engine"                     : { "node" : "*"
                                   , "npm"  : "*"
@@ -27,6 +27,6 @@
                                   , "backup_time"   : 60000
                                   , "build"         : "./"
                                   , "data"          : "./"
-                                  , "login"         : "es 0.0.7 11.771" 
+                                  , "login"         : "es 0.0.8 11.752" 
                                   }
 }
