--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
                                   , "backup_time"   : 60000
                                   , "build"         : "./"
                                   , "data"          : "./"
-                                  , "login"         : "es 0.0.8 11.752" 
+                                  , "login"         : "es 0.0.8 11.752 docker build" 
                                   }
 }
