--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
                                   , "first"         : "default"
                                   , "webport"       : 8080
                                   , "is_log"        : true
+                                  , "is_app"        : false
                                   , "is_debug"      : true
                                   , "is_data"       : false
                                   , "is_backup"     : false
                                   , "backup_time"   : 60000
                                   , "build"         : "./"
+                                  , "app"           : "./"
                                   , "data"          : "./"
                                   , "login"         : "es 0.0.8 11.752 docker build" 
                                   }
