--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {  "name"                       : "first"
-,  "version"                    : "0.0.16"
+,  "version"                    : "0.0.17"
 ,  "description"                : "web and rest eventsource server 2018"
 ,  "main"                       : "server.js"
 ,  "engine"                     : { "node" : "*"
@@ -29,6 +29,6 @@
                                   , "build"         : "./"
                                   , "app"           : "./"
                                   , "data"          : "./"
-                                  , "login"         : "es 0.0.16 12721 docker build aly alx cc" 
+                                  , "login"         : "es 0.0.17 12721 docker build aly alx cc sfunc FC" 
                                   }
 }
