--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {  "name"                       : "first"
-,  "version"                    : "0.0.20"
-,  "description"                : "web and rest eventsource server 2018"
+,  "version"                    : "0.0.21"
+,  "description"                : "web and rest eventsource server 2019"
 ,  "main"                       : "server.js"
 ,  "engine"                     : { "node" : "*"
                                   , "npm"  : "*"
@@ -29,6 +29,6 @@
                                   , "build"         : "./"
                                   , "app"           : "./"
                                   , "data"          : "./"
-                                  , "login"         : "es 0.0.20 12736 docker build aly alx cc sfunc FC" 
+                                  , "login"         : "es 0.0.21 12xxx docker build aly alx cc sfunc FC buzz" 
                                   }
 }
